--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,5 @@
 <form action="/todos/{{ todo._id }}/edit" method="POST">
+  <input type="checkbox" name="isDone" {{#if todo.isDone}} checked {{/if}}>
   {{!-- 會以 POST 動作向 /todos/{{todo._id}}/edit 發出請求 --}}
   <input type="text" placeholder="name" name="name" value="{{ todo.name}}">
   <button type="submit">Save</button>
