--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,9 +8,10 @@
     {{this.name}}
     <a href="./todos/{{ this._id }}">detail</a>
     <a href="./todos/{{ this._id }}/edit">edit</a>
-    <form action="./todos/{{ this._id }}/delete" method="POST" style="display:inline;">
-      <button type="submit">delete</button>
-    </form>
+    {{!-- U76 Restful 表達 CRUD 功能 <form action="./todos/{{ this._id }}/delete" method="POST" style="display:inline;">--}}
+    <form action="./todos/{{ this._id }}?_method=DELETE" method="POST" style="display:inline;">
+     <button type="submit">delete</button>
+   </form>
   </li>
   {{/each}}
 </ul>
