--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,25 @@
 {{!-- <h2>Hello world! 這是 index</h2> --}}
 
 <a href="./todos/new">Create</a>
-<ul>
+<ul class="list-group">
   {{#each todos}}
-  <li>
-    <input type="checkbox" name="isDone" {{#if this.isDone}} checked {{/if}} disabled>
-    {{this.name}}
-    <a href="./todos/{{ this._id }}">detail</a>
-    <a href="./todos/{{ this._id }}/edit">edit</a>
-    {{!-- U76 Restful 表達 CRUD 功能 <form action="./todos/{{ this._id }}/delete" method="POST" style="display:inline;">--}}
-    <form action="./todos/{{ this._id }}?_method=DELETE" method="POST" style="display:inline;">
-     <button type="submit">delete</button>
-   </form>
-  </li>
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-auto me-auto">
+          <input style="vertical-align: middle;" type="checkbox" name="isDone" {{#if this.isDone}} checked {{/if}} disabled>
+          <h4 style="display: inline; vertical-align: middle;">
+            {{this.name}}
+          </h4>
+        </div>
+        <div class="col-auto">
+          <a class="btn btn-secondary" href="./todos/{{ this._id }}">detail</a>
+          <a class="btn btn-success" href="./todos/{{ this._id }}/edit">edit</a>
+      {{!-- U76 Restful 表達 CRUD 功能 <form action="./todos/{{ this._id }}/delete" method="POST" style="display:inline;">--}}
+          <form action="./todos/{{ this._id }}?_method=DELETE" method="POST" style="display:inline;">
+            <button class="btn btn-danger" type="submit">delete</button>
+          </form>
+        </div>
+      </div>
+    </li>
   {{/each}}
 </ul>
