--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,8 +1,17 @@
 {{!-- U76 Restful 表達 CRUD 功能 <form action="/todos/{{ todo._id }}/edit" method="POST"> --}}
-  <form action="/todos/{{ todo._id }}?_method=PUT" method="POST">
+  {{!-- <form action="/todos/{{ todo._id }}?_method=PUT" method="POST">
     <input type="checkbox" name="isDone" {{#if todo.isDone}} checked {{/if}}>
     {{!-- 會以 POST 動作向 /todos/{{todo._id}}/edit 發出請求 --}}
-    <input type="text" placeholder="name" name="name" value="{{ todo.name}}">
+    {{!-- <input type="text" placeholder="name" name="name" value="{{ todo.name}}">
     <button type="submit">Save</button>
     <a href="/">back</a>
+  </form> --}} 
+  <form action="/todos/{{ todo._id }}?_method=PUT" method="POST" style="display: inline;">
+    <div class="input-group">
+      <div class="input-group-text">
+        <input type="checkbox" class="form-check-input mt-0" name="isDone" {{#if todo.isDone }} checked {{/if}}>
+      </div>
+      <input class="form-control" type="text" placeholder="name" name="name" value="{{ todo.name }}">
+      <button class="btn btn-success" type="submit">Save</button>
+    </div>
   </form>
