chore: heroku init

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 {{!-- <h2>Hello world! 這是 index</h2> --}}
 
-<a href="./todos/new">Create</a>
+{{!-- <a href="./todos/new">Create</a> --}}
 <ul class="list-group">
   {{#each todos}}
     <li class="list-group-item">
