--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
-  <link href="https://bootswatch.com/5/united/bootstrap.min.css" rel="stylesheet">
+  <link href="https://bootswatch.com/5/united/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body class="bg-light">
   <header>
-    <nav class="navbar navbar-dark justify-content-between" style="padding: 8px 16px background-color: #e95420;">
-        <a class="navbar-brand" href="/">Todo List</a>
+    <nav class="navbar navbar-dark bg-primary justify-content-between">
+    {{!-- <nav class="navbar navbar-dark justify-content-between" style="padding: 8px 16px background-color: #e95420;"> --}}
+      <a class="navbar-brand" href="/">Todo List</a>
       <a class="btn btn-outline-light" href="/todos/new">Create</a>
     </nav>
   </header>
